improve algorithms
